--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "node-worker-threads-pool": "^1.5.1",
     "nodemailer": "^6.9.13",
     "socket.io": "^4.7.5"
   }
