--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,21 +4,27 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.9.11",
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.16",
-    "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.20",
     "@mui/styles": "^5.15.18",
+    "@mui/x-date-pickers": "^5.0.0",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
+    "date-fns": "^2.28.0",
+    "dayjs": "^1.11.11",
     "firebase": "^10.12.1",
     "formik": "^2.4.6",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
