--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "i": "^0.3.7",
     "nodemon": "^3.1.0",
     "npm": "^10.8.1",
@@ -51,6 +53,8 @@
     "multer": "^1.4.5-lts.1",
     "node-worker-threads-pool": "^1.5.1",
     "nodemailer": "^6.9.13",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
