--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@mui/styles": "^5.15.18",
     "@mui/x-date-pickers": "^5.0.0",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-table": "^8.17.3",
+    "@tanstack/react-virtual": "^3.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
+    "axios-mock-adapter": "^1.22.0",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.11",
     "firebase": "^10.12.1",
@@ -60,5 +63,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0"
   }
 }
